# easymanet

./: .coderabbit.yaml  .coverage  .gitignore  AGENTS.md  README.md  planning.md  pyproject.toml
docs/: README.md  architecture-review-2026-06-10.md  architecture.md  flashing.md  lessons-learned.md  manifest.md  monorepo.md  openmanet-config-investigation.md  product-and-release-planning.md  public-repos.md  release.md  sample-fleet.md  verification-system-plan.md
easymanet/: build.py  cli.py  cli_common.py  cli_flash.py  cli_image.py  disks.py  download.py  image.py  inject.py  manifest.py  platform.py  privileges.py  render.py  validate.py
examples/: fleet.yml  three-node-field-mesh.yml
firstboot/: 99-easymanet  boot-report.sh  network.sh  provision.sh
future concepts and plans/: node-display-monitoring.md
scripts/: publish_product_repos.py  verify_overlay_packaging.py
tests/: test_artifact_verification.py  test_build.py  test_cli.py  test_desktop.py  test_desktop_renderer.py  test_diagnostics.py  test_disks.py  test_download.py  test_download_manifest.py  test_extra_packages.py  test_firstboot.py  test_flash_workflow.py  test_format.py  test_hil_verify.py  test_image.py  test_image_workflows.py  test_inject.py  test_led_status.py  test_manifest.py  test_packaging.py  test_privileges.py  test_provision_behavior.py  test_publish.py  test_publish_product_repos.py  test_release_cleanup.py  test_release_manifest.py  test_release_notes.py  test_render.py  test_support_bundle.py  test_validate.py  test_verify.py  test_version.py  test_workspace.py
(+112 files in other folders)
